--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="dev.paytrack.paytrack.BaseActivity">
+    tools:context="dev.paytrack.paytrack.activity.BaseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
