--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dev.paytrack.paytrack.TripActivity">
+    tools:context="dev.paytrack.paytrack.activity.TripActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
