--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -41,7 +41,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.google.android.gms.maps.MapViewt
+    <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/mapView"
