Create trip activity: no test, no image

--- a/app/src/main/res/layout/trip_row_layout.xml
+++ b/app/src/main/res/layout/trip_row_layout.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="4dp" />
 
         <TextView
-            android:id="@+id/initialDate"
+            android:id="@+id/dates"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
