--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -82,6 +82,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <RelativeLayout
+        android:id="@+id/done_button"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentBottom="true">
