--- a/app/src/main/res/layout/venue_row.xml
+++ b/app/src/main/res/layout/venue_row.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/white"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:orientation="vertical"
+android:background="@color/white"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:orientation="vertical"
+        android:layout_margin="16dp"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/name"
             android:text="Starbucks Pl. Univeritat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
             android:textColor="@color/black"
             android:textSize="20sp"/>
 
@@ -26,18 +30,18 @@
             android:text="Pub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:textSize="16sp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/divider" />
+
+</RelativeLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:background="@color/divider" />
 
 </LinearLayout>
