--- a/app/src/main/res/layout/payment_row.xml
+++ b/app/src/main/res/layout/payment_row.xml
@@ -8,28 +8,32 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/name"
-            android:text="Starbucks Pl. Univeritat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_margin="16dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:textColor="@color/black"
-            android:textSize="20sp"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/price"
-            android:text="4,70 €"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/name"
+                android:text="Starbucks Pl. Univeritat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/price"
+                android:text="4,70 €"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
